--- a/nuget/TFSBuildScripts.nuspec
+++ b/nuget/TFSBuildScripts.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>TFSBuildScripts</id>
-    <version>1.2.1-rc1</version>
+    <version>1.2.1</version>
     <authors>Jeroen Swart</authors>
     <owners>Jeroen Swart</owners>
     <projectUrl>https://github.com/CodeblackNL/TFSBuildScripts</projectUrl>
